labs/session-10-production/starter/api-deployment-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: europe-west9-docker.pkg.dev/cloud-447406/training/api:v1
          ports:
            - containerPort: 8080
